--- a/public/styles.css
+++ b/public/styles.css
@@ -93,6 +93,7 @@ body {
 }
 .icons {
   width: 15%;
+  margin-top: 4rem;
 }
 #profilePhoto {
   width: 25%;
@@ -176,6 +177,10 @@ section {
   color: #605b56;
   line-height: 2rem;
   max-width: 50%;
+  height: 22rem;
+}
+#contactForm input{
+  height: 80%;
 }
 input,
 textarea {
@@ -215,6 +220,7 @@ textarea {
   clear: both;
   text-align: right;
   border-bottom: 0.1rem solid #605b56;
+  height: 100%;
 }
 .input-wrapper label {
   float: left;
@@ -341,6 +347,9 @@ textarea {
   #contactForm {
     min-width: 70%;
   }
+#contactForm input {
+    height: 46%;
+}
   input,
   textarea {
     margin: 1rem 0 1rem 3.5rem;
@@ -483,6 +492,7 @@ textarea {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: left;
     /* margin-top: 6rem; */
   }
   #profilePhoto {
@@ -545,6 +555,9 @@ textarea {
   .contact-text,
   #contactForm {
     max-width: 80%;
+  }
+  #contactForm {
+    height: 45rem;
   }
   input,
   textarea {
