--- a/public/styles.css
+++ b/public/styles.css
@@ -92,9 +92,13 @@ body {
   justify-content: space-between;
 }
 .icons {
-  width: 15%;
+  width: 15%;  
+}
+
+nav .icons {
   margin-top: 4rem;
 }
+
 #profilePhoto {
   width: 25%;
 }
