--- a/public/styles.css
+++ b/public/styles.css
@@ -398,11 +398,11 @@ textarea {
   .content {
     width: 100%;
   }
-  nav {
+  /* nav {
     padding: 0;
     width: auto;
     background-color: #f5f5f5;
-  }
+  } */
   .socialMedia {
     flex-direction: column;
     align-items: center;
