--- a/public/admin.css
+++ b/public/admin.css
@@ -127,6 +127,9 @@ h2 {
   h2 {
     margin-top: 1rem;
   }
+  .nav-list{
+    display: none;
+  }
   #messages th:first-child,
   #messages td:first-child {
     display: none;
@@ -141,7 +144,7 @@ h2 {
     margin-right: 0;
     width: 50%;
   }
-  .nav-list {
+  .mobile-menu {
     width: 100%;
   }
   .content {
@@ -183,7 +186,7 @@ h2 {
   .popup.open {
     left: 0;
   }
-  .popup .nav-list {
+  .popup .mobile-menu {
     width: 100%;
     height: 100%;
     display: flex;
@@ -193,11 +196,11 @@ h2 {
     padding: 3rem 0;
     overflow: auto;
   }
-  .popup .nav-list > li {
+  .popup .mobile-menu li {
     width: 100%;
   }
 
-  .popup .nav-list > li > a {
+  .popup .mobile-menu li a {
     width: 100%;
     display: flex;
     justify-content: center;
@@ -207,7 +210,7 @@ h2 {
     color: #3f3f3f;
   }
 
-  .popup .menu > li > a:hover {
+  .popup .mobile-menu li a:hover {
     background-color: rgba(122, 82, 179, 0.1);
   }
 
@@ -227,9 +230,7 @@ h2 {
     overflow: hidden;
   }
 
-  .nav-list {
-    display: none;
-  }
+  
   th {
     padding: 0.2rem;
   }
