--- a/public/styles.css
+++ b/public/styles.css
@@ -27,6 +27,9 @@ a,
 li {
   border-bottom: 2px solid transparent;
 }
+.mobile-menu {
+  display: none;
+}
 #answer {
   padding: 1rem;
   font-size: 2rem;
